force-app/main/default/objects/smagicinteract__Incoming_SMS__c/fields/smagicinteract__account__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Incoming SMS</relationshipLabel>
    <relationshipName>incoming_smss</relationshipName>
    <type>Lookup</type>
</CustomField>