force-app/main/default/objects/smagicinteract__Incoming_SMS__c/fields/smagicinteract__actionTaken__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__actionTaken__c</fullName>
    <description>This field contains the action taken on Incoming. The action can be: Create Task, Create Lead, Create Contact, Create Case, etc.</description>
    <label>actionTaken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>