force-app/main/default/objects/smagicinteract__Incoming_SMS__c/fields/smagicinteract__Campaign__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the value of the related campaign for incoming.</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Incoming SMS</relationshipLabel>
    <relationshipName>Incoming_SMS</relationshipName>
    <type>Lookup</type>
</CustomField>