force-app/main/default/objects/smagicinteract__Incoming_SMS__c/fields/smagicinteract__Channel_Name__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Channel_Name__c</fullName>
    <description>Stores the Name of channel type</description>
    <inlineHelpText>Stores the Name of channel type</inlineHelpText>
    <label>Channel Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>