force-app/main/default/objects/smagicinteract__Incoming_SMS__c/fields/smagicinteract__Contact__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the value of the related contact for incoming.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Incoming SMS</relationshipLabel>
    <relationshipName>Incoming_SMS</relationshipName>
    <type>Lookup</type>
</CustomField>