force-app/main/default/objects/smagicinteract__Incoming_SMS__c/fields/smagicinteract__Conversation__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Conversation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the value of the related conversation for incoming.</description>
    <label>Conversation</label>
    <referenceTo>smagicinteract__Conversation__c</referenceTo>
    <relationshipLabel>Incoming SMS</relationshipLabel>
    <relationshipName>Incoming_SMS</relationshipName>
    <type>Lookup</type>
</CustomField>