force-app/main/default/objects/smagicinteract__Incoming_SMS__c/fields/smagicinteract__Converse_App__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Converse_App__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the value of the related app for incoming.</description>
    <label>Converse App</label>
    <referenceTo>smagicinteract__Converse_App__c</referenceTo>
    <relationshipLabel>Incoming SMS</relationshipLabel>
    <relationshipName>Incoming_SMS</relationshipName>
    <type>Lookup</type>
</CustomField>