force-app/main/default/objects/smagicinteract__Incoming_SMS__c/fields/smagicinteract__Converse_App_Action__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Converse_App_Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the value of the related converse app for incoming.</description>
    <label>Converse App Action</label>
    <referenceTo>smagicinteract__Converse_App_Action__c</referenceTo>
    <relationshipLabel>Incoming SMS</relationshipLabel>
    <relationshipName>Incoming_SMS</relationshipName>
    <type>Lookup</type>
</CustomField>