force-app/main/default/objects/smagicinteract__Incoming_SMS__c/fields/smagicinteract__Favourite__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Favourite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field contains the value of the message as favorite if the user selects this field.</description>
    <label>Favourite</label>
    <type>Checkbox</type>
</CustomField>