force-app/main/default/objects/smagicinteract__Incoming_SMS__c/fields/smagicinteract__Inbound_Number__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Inbound_Number__c</fullName>
    <description>You can receive incoming sms to this number.</description>
    <label>Inbound Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>