force-app/main/default/objects/smagicinteract__Incoming_SMS__c/fields/smagicinteract__Lead__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the value of the related lead for incoming.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Incoming SMS</relationshipLabel>
    <relationshipName>Incoming_SMS</relationshipName>
    <type>Lookup</type>
</CustomField>