force-app/main/default/objects/smagicinteract__Incoming_SMS__c/fields/smagicinteract__Mobile_Number_without_ISD_Code__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Mobile_Number_without_ISD_Code__c</fullName>
    <description>This fields contains the mobile number sending message without ISD code.</description>
    <label>Mobile Number without ISD Code</label>
    <type>Phone</type>
</CustomField>