force-app/main/default/objects/smagicinteract__Incoming_SMS__c/fields/smagicinteract__New__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__New__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Select this field to mark the message as New.</description>
    <label>New</label>
    <type>Checkbox</type>
</CustomField>