force-app/main/default/objects/smagicinteract__Incoming_SMS__c/fields/smagicinteract__ObjectType__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__ObjectType__c</fullName>
    <description>This field contains the primary object.</description>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>