force-app/main/default/objects/smagicinteract__Incoming_SMS__c/fields/smagicinteract__opportunity__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Incoming SMS</relationshipLabel>
    <relationshipName>incoming_smss</relationshipName>
    <type>Lookup</type>
</CustomField>