force-app/main/default/objects/smagicinteract__Incoming_SMS__c/fields/smagicinteract__outgoing_sms__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__outgoing_sms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the ID of the previous outgoing SMS.</description>
    <label>Outgoing SMS</label>
    <referenceTo>smagicinteract__smsMagic__c</referenceTo>
    <relationshipLabel>Incoming SMS</relationshipLabel>
    <relationshipName>Incoming_SMS</relationshipName>
    <type>Lookup</type>
</CustomField>