force-app/main/default/objects/smagicinteract__Incoming_SMS__c/fields/smagicinteract__Request_Context__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Request_Context__c</fullName>
    <description>This field will capture request context details for the message to send</description>
    <label>Request Context</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>