force-app/main/default/objects/smagicinteract__Incoming_SMS__c/fields/smagicinteract__Response_Time__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Response_Time__c</fullName>
    <formula>IF( smagicinteract__Last_Outgoing_SMS__c == null ,0 ,(CreatedDate -  smagicinteract__Last_Outgoing_SMS__r.CreatedDate)*24*60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>