force-app/main/default/objects/smagicinteract__Incoming_SMS__c/fields/smagicinteract__Sent_By__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Sent_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Deprecated. Do not use.</description>
    <label>Sent By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Incoming_SMS</relationshipName>
    <type>Lookup</type>
</CustomField>