force-app/main/default/objects/smagicinteract__Incoming_SMS__c/fields/smagicinteract__User__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the ID of the related user.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Incoming_SMS1</relationshipName>
    <type>Lookup</type>
</CustomField>